# MTGLimited

./: .gitignore  README.md  global_configuration.py  limited.py  mtglimited.py  pyproject.toml
cards_handling/: booster.py  refresh.py  sheets.py  utils.py
gamemodes/: chaos.py  limited.py  prerelease.py  sealed.py
models/: booster.py  card.py  card_models.py  prerelease.py  set.py
utils/: refresh.py
